--- a/startfour.html
+++ b/startfour.html
@@ -339,7 +339,11 @@ document.addEventListener('YixinJSBridgeReady', function() {
 document.addEventListener("touchstart",play, false);
 }
 audioAutoPlay('Jaudio');
-		var offsetX = $("#loveHeart").width() / 2;
+function   GoTo(){
+    location.href="index.html";
+}
+setTimeout("GoTo()",47900);
+var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
 		together.setFullYear(2018, 7, 30);
