--- a/startfour.html
+++ b/startfour.html
@@ -339,10 +339,10 @@ document.addEventListener('YixinJSBridgeReady', function() {
 document.addEventListener("touchstart",play, false);
 }
 audioAutoPlay('Jaudio');
-//function   GoTo(){
-//    location.href="index.html";
-//}
-//setTimeout("GoTo()",29000);
+function   GoTo(){
+    location.href="index.html";
+}
+setTimeout("GoTo()",29000);
 var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
